Basic react view implementation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
+  <script type="text/javascript" src="photos.js"></script>
   <script type="text/javascript" src="js/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="js/underscore/underscore.js"></script>
   <script type="text/javascript" src="js/backbone/backbone.js"></script>
-  <script type="text/javascript" src="js/react/react.min.js"></script>
+  <script type="text/javascript" src="js/react/react.js"></script>
   <script type="text/javascript" src="js/greensock/src/minified/TweenMax.min.js"></script>
   <script type="text/javascript" src="build/app.js"></script>
-  <script type="text/javascript" src="photos.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 
 </head>
