Finished infinite scrolling with react only

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script type="text/javascript" src="js/backbone/backbone.js"></script>
   <script type="text/javascript" src="js/react/react.js"></script>
   <script type="text/javascript" src="js/greensock/src/minified/TweenMax.min.js"></script>
+  <script type="text/javascript" src="build/components/PhotoView.js"></script>
+  <script type="text/javascript" src="build/components/PhotoWall.js"></script>
   <script type="text/javascript" src="build/app.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 
