Changed to minified libs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="js/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="js/underscore/underscore.js"></script>
   <script type="text/javascript" src="js/backbone/backbone.js"></script>
-  <script type="text/javascript" src="js/react/react.js"></script>
+  <script type="text/javascript" src="js/react/react.min.js"></script>
   <script type="text/javascript" src="js/greensock/src/minified/TweenMax.min.js"></script>
   <script type="text/javascript" src="build/components/PhotoView.js"></script>
   <script type="text/javascript" src="build/components/PhotoWall.js"></script>
